# Encrypted-Messaging

Encrypted-Messaging-main/: server.cpp
Encrypted-Messaging-main/Messaging/: CMakeLists.txt  dh2048.pem  server.cert  server.key
Encrypted-Messaging-main/Messaging/back/: crypto.cpp  main.cpp  socketHandler.cpp
Encrypted-Messaging-main/Messaging/back/headers/: crypto.hpp  socketHandler.hpp
Encrypted-Messaging-main/Messaging/certs/: server.crt  server.key
Encrypted-Messaging-main/Messaging/front/: webFrame.html  webFunction.js  webStyles.css
Messaging/: CMakeLists.txt  server.key
Messaging/back/: CMakeLists.txt  crypto.cpp  main.cpp  socketHandler.cpp
Messaging/back/headers/: crypto.hpp  socketHandler.hpp
Messaging/front/: server.py  webFrame.html  webFunction.js  webStyles.css
